Endpoint for getting a user by username
